# digital-form-builder

./: .browserslistrc  .cfignore  .dockerignore  .drone.yml  .eslintignore  .eslintrc.json  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierignore  .workspace  .yarnrc.yml  CONTRIBUTING.md  Dockerfile  GitVersion.yml  LICENSE  README.md  README_DLUHC.md  babel.config.json  docker-bake.hcl  docker-compose.aws.yml  docker-compose.built.yml  docker-compose.dev.yml  docker-compose.smoke.yml  docker-compose.yml  ecosystem.config.js  generated.txt  index.js  lighthouserc.js  manifest.yml  package-lock.json  package.json  readme.md  test  test.md  tsconfig.json  version  wdio.conf.js
python/: README.md  __init__.py  answer_displayer.py  dictionaries.py  pyproject.toml  requirements.txt  setup.py
python/answer_displayers/: CheckboxesField.py  ClientSideFileUploadField.py  DatePartsField.py  EmailAddressField.py  FreeTextField.py  MonthYearField.py  MultiInputField.py  NumberField.py  RadiosField.py  TelephoneNumberField.py  TextField.py  UkAddressField.py  WebsiteField.py  YesNoField.py  __init__.py
python/components/: CheckboxesField.py  ClientSideFileUploadField.py  EmailAddressField.py  FreeTextField.py  MonthYearField.py  MultiInputField.py  NumberField.py  RadiosField.py  TelephoneNumberField.py  TextField.py  UkAddressField.py  __init__.py
python/tests/: test_CheckboxesField.py  test_ClientSideFileUploadField.py  test_DatePartsField.py  test_EmailAddressField.py  test_FreeTextField.py  test_MonthYearField.py  test_MultiInputField.py  (+7 more)
(+2732 files in other folders)
